# File-Scrapper

./: .gitattributes  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  output_c.json  output_d.json  output_d.txt  sample.txt
scripts/: build.cmd  build.sh  check-system.sh  example.sh  install-deps.sh  quick-start.sh  start.cmd  start.sh
src/: main.cpp
